--- a/docs/config.json
+++ b/docs/config.json
@@ -1,13 +1,14 @@
 {
-	"title": "I&A 3",
+	"title": "Invade & Annex 3",
 	"tagline": "Create your own I&A 3 flavour with our development kit",
 	"image": "img/ia3-10.png",
 	"theme": "navy",
 	"repo": "jpwilliams/I-A-3",
-	"float": true,
-	"date_modified": true,
+	"version": "v0.1-pre-alpha",
+	"float": false,
+	"date_modified": false,
 	"twitter": ["atticjack", "ahoyworld"],
-	"google_analytics": "UA-12653604-10",
+	"google_analytics": "UA-20561075-3",
 	"links": {
 		"Download": "https://github.com/jpwilliams/I-A-3/archive/master.zip",
 		"GitHub Repo": "https://github.com/jpwilliams/I-A-3",
